wallabag/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wallabag
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      containers:
      - name: wallabag
        image: wallabag/wallabag
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wallabag
          mountPath: /var/www/wallabag/web/assets/images
          subPath: docker/wallabag/images
      volumes:
      - name: wallabag
        glusterfs:
          endpoints: glusterfs-cluster
          path: data
          readOnly: false
