wallabag/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  labels:
    app: wallabag
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: wallabag
